# bdunnette.github.io

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CNAME  README.md  a-placeholder.html  about.md  authors.html  categories.html  config.toml  index.html  index.xml  minneapolis-parks.ipynb  myst.yml  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy.yml  pelican.yml
about/: index.html
author/: brian-dunnette.html
authors/: index.html  index.xml
categories/: index.html  index.xml
category/: misc.html
content/: about.md  test.md
content/posts/: 2020-60a-candidates.md
output/: a-placeholder.html  archives.html  authors.html  categories.html  index.html  tags.html
output/author/: brian-dunnette.html
output/category/: misc.html
posts/: index.html  index.xml
posts/2020-60a-candidates/: index.html
posts/page/1/: index.html
series/: index.html  index.xml
tags/: index.html  index.xml
tags/politics/: index.html  index.xml
tags/politics/page/1/: index.html
